--- a/listings/templates/product/detail.html
+++ b/listings/templates/product/detail.html
@@ -46,7 +46,8 @@ data-target="#myModal">Write review</a>
 </div>
 </div>
 <div class="mb-4">
-<form>
+<form action="{% url 'cart:cart_add' product.id %}" method="post">
+    {% csrf_token %}
 <span class="input-group add-to-cart shadow-custom">
 <div class="input-group-prepend">
     <span class="input-group-text font-weight-bold px-3 btn btn-block price">
@@ -54,7 +55,7 @@ data-target="#myModal">Write review</a>
     </span>
 </div>
 <span id="minus" class="input-group-text button_minus px-4">-</span>
-<input type="number" value="1" class="form-control text-center px-3">
+{{ cart_product_form.quantity }}
 <span id="plus" class="input-group-text button_plus px-4">+</span>
 <div class="input-group-append">
 <button class="btn btn-danger px-4 reduce_padding"
